<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="#15dbd2e0"
    android:id="@+id/scroll"
    android:fillViewport="false">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Main"
    android:id="@+id/layout"
    android:orientation="vertical"
    android:weightSum="1"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/gross_salary"
        android:id="@+id/gross_text"
        android:textStyle="bold"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/gross_input"
        android:hint="@string/zero"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/age"
        android:id="@+id/age_text"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/age_input"
        android:hint="@string/suggested_age"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/status"
        android:id="@+id/status_text"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="5dp" />

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/status_input"
        android:entries="@array/status_array"
        android:prompt="@string/single"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pension_input"
        android:id="@+id/pension_text"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:gravity="center" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/zero"
        android:id="@+id/pension_input"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/salary_sacrifice_input"
        android:id="@+id/salary_sacrifice"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/zero"
        android:id="@+id/salary_sacrifice_input"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bik"
        android:id="@+id/bik"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="5dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:hint="@string/zero"
        android:id="@+id/bik_input"
        android:gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

    <Button
        android:layout_width="156dp"
        android:layout_height="0dp"
        android:text="@string/calculate"
        android:id="@+id/calculate"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.60"
        android:background="#b6db85"
        android:layout_marginTop="20dp" />



</LinearLayout>
</ScrollView>