<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="#15dbd2e0"
    android:id="@+id/scroll"
    android:fillViewport="false">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="app.tax.Result">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/result"
        android:id="@+id/result"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="0dp"
        android:textColor="@android:color/holo_blue_dark" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="9dp"
        android:padding="7dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/gross_salary"
            android:id="@+id/gross_desc"
            android:textStyle="bold"
            android:layout_weight="1.25"
            android:gravity="start"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Small Text"
            android:id="@+id/gross_value"
            android:layout_weight=".75"
            android:gravity="end"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pension_display"
                android:id="@+id/pension_desc"
                android:gravity="start"
                android:layout_weight="1.25"
                android:layout_marginLeft="20dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Small Text"
                android:id="@+id/pension_value"
                android:layout_gravity="end"
                android:gravity="end"
                android:layout_weight=".75" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/salary_sacrifice_display"
        android:id="@+id/sacrifice_desc"
        android:gravity="start"
        android:layout_weight="1.25"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Small Text"
        android:id="@+id/sacrifice_value"
        android:layout_marginLeft="0dp"
        android:gravity="end"
        android:layout_weight=".75" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/bik_result"
            android:id="@+id/bik_desc"
            android:gravity="start"
            android:layout_weight="1.25"
            android:layout_marginLeft="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Small Text"
            android:id="@+id/bik_value"
            android:layout_marginLeft="45dp"
            android:layout_weight="0.83"
            android:gravity="end" />


    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:background="#ffdcdcdc">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/taxable_salary"
        android:id="@+id/taxable_desc"
        android:gravity="start"
        android:layout_weight="1.25" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Small Text"
        android:id="@+id/taxable_value"
        android:layout_marginLeft="0dp"
        android:gravity="end"
        android:layout_weight=".75" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/income_tax"
        android:id="@+id/incomeGross_desc"
        android:gravity="start"
        android:layout_weight="1.25" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Small Text"
        android:id="@+id/incomeGross_value"
        android:layout_marginLeft="0dp"
        android:gravity="end"
        android:layout_weight=".75" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tax_credits"
        android:id="@+id/credits_desc"
        android:gravity="start"
        android:layout_weight="1.25"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Small Text"
        android:id="@+id/credits_value"
        android:layout_marginLeft="0dp"
        android:gravity="end"
        android:layout_weight=".75" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/total_tax"
        android:id="@+id/incomePayable_desc"
        android:gravity="start"
        android:layout_weight="1.25" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Small Text"
        android:id="@+id/incomePayable_value"
        android:layout_marginLeft="0dp"
        android:gravity="end"
        android:layout_weight=".75" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/prsi"
        android:id="@+id/prsi_desc"
        android:gravity="start"
        android:layout_weight="1.25"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Small Text"
        android:id="@+id/prsi_value"
        android:layout_marginLeft="0dp"
        android:gravity="end"
        android:layout_weight=".75" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/usc"
        android:id="@+id/usc_desc"
        android:gravity="start"
        android:layout_weight="1.25"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Small Text"
        android:id="@+id/usc_value"
        android:layout_marginLeft="0dp"
        android:gravity="end"
        android:layout_weight=".75" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:background="#ffdcdcdc">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/total_deduction"
        android:id="@+id/deductions_desc"
        android:gravity="start"
        android:layout_weight="1.25" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Small Text"
        android:id="@+id/deductions_value"
        android:layout_marginLeft="0dp"
        android:gravity="end"
        android:layout_weight=".75" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_green_light"
        android:layout_marginTop="15dp"
        android:padding="7dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/net_salary"
        android:id="@+id/net_desc"
        android:textStyle="bold"
        android:gravity="start"
        android:layout_weight="1.25" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Small Text"
        android:id="@+id/net_value"
        android:gravity="end"
        android:layout_marginLeft="0dp"
        android:layout_weight=".75"
        android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/background_light">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/monthly_income"
        android:id="@+id/monthly_desc"
        android:gravity="start"
        android:layout_weight="1.25" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Small Text"
        android:id="@+id/monthly_value"
        android:layout_marginLeft="0dp"
        android:gravity="end"
        android:layout_weight=".75" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/weekly_income"
        android:id="@+id/weekly_desc"
        android:gravity="start"
        android:layout_weight="1.25" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Small Text"
        android:id="@+id/weekly_value"
        android:layout_marginLeft="0dp"
        android:gravity="end"
        android:layout_weight=".75" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/daily_income"
        android:id="@+id/daily_desc"
        android:gravity="start"
        android:layout_weight="1.25" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Small Text"
        android:id="@+id/daily_value"
        android:layout_marginLeft="0dp"
        android:gravity="end"
        android:layout_weight=".75" />

    </LinearLayout>

</LinearLayout>
</ScrollView>